--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,7 @@
     display: flex;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding: 25px 25px;
+    padding: 2.5rem 2.5rem;
 }
 
 .phone_contact {
