--- a/assets/css/burger.css
+++ b/assets/css/burger.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+.close {
+    visibility: hidden;
+}
+
+.overlay {
+    visibility: visible;
+}
+
 .hamburger-menu {
     position: fixed;
     z-index: 5;
@@ -14,7 +22,6 @@
 .menu__box {
     display: block;
     position: fixed;
-    visibility: hidden;
     z-index: 4;
     top: 0;
     left: -100%;
