--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -21,9 +21,18 @@
     display: flex;
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
+    -ms-flex-pack: center;
+    justify-content: center;
     -ms-flex-item-align: center;
     align-self: center;
     margin-right: 1.5rem;
+}
+
+.block__contact .phone__block .phone__p__block {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .block__contact .marker__block {
@@ -36,7 +45,6 @@
 }
 
 .block__contact .marker__block p {
-    margin-left: 10px;
     color: #152313;
     font-size: 1.8rem;
 }
